tests/run/error_missing_return.out
tests/run/error_missing_return.em:7:1: error: not every path returns a value (a function with a return type must return on every path)
